@@ -8,11 +8,11 @@ import org.example.entity.User;
 import org.example.repository.ReviewRepository;
 import org.example.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,71 +20,91 @@ public class ReviewService {
 
     private final ReviewRepository reviewRepository;
     private final UserRepository userRepository;
+    // private final DealRepository dealRepository;
+    // private final ServiceRequestRepository serviceRequestRepository;
 
-    // Создать отзыв
+    // Создать новый отзыв
     @Transactional
     public ReviewResponse createReview(CreateReviewRequest request, Long authorId) {
-        // Находим автора (кто оставляет отзыв)
+        // 1. Проверяем, существует ли автор отзыва
         User author = userRepository.findById(authorId)
-                .orElseThrow(() -> new RuntimeException("Автор не найден"));
+                .orElseThrow(() -> new RuntimeException("Автор не найден с id: " + authorId));
 
-        // Находим получателя (кому оставляют отзыв)
-        User reviewee = userRepository.findById(request.getRevieweeId())
-                .orElseThrow(() -> new RuntimeException("Получатель отзыва не найден"));
+        // 2. Проверяем, существует ли получатель отзыва
+        User user = userRepository.findById(request.getUserId())
+                .orElseThrow(() -> new RuntimeException("Пользователь не найден с id: " + request.getUserId()));
 
-        // Нельзя оставить отзыв самому себе
-        if (author.getId().equals(reviewee.getId())) {
+        // 3. Нельзя оставить отзыв самому себе
+        if (author.getId().equals(user.getId())) {
             throw new RuntimeException("Нельзя оставить отзыв самому себе");
         }
 
-        // Проверяем, что отзыв по этой сделке еще не оставлен
-        if (reviewRepository.existsByDealId(request.getDealId())) {
-            throw new RuntimeException("Отзыв по этой сделке уже оставлен");
+        // 4. Проверяем, не оставлял ли уже отзыв для этой сделки
+        if (request.getDealId() != null) {
+            boolean alreadyReviewed = reviewRepository.existsByAuthorAndDealId(author, request.getDealId());
+            if (alreadyReviewed) {
+                throw new RuntimeException("Вы уже оставили отзыв для этой сделки");
+            }
         }
 
-        // Создаем отзыв
+        // 5. Создаем отзыв
         Review review = Review.builder()
                 .author(author)
-                .user(reviewee)
+                .user(user)
                 .rating(request.getRating())
                 .comment(request.getComment())
                 .build();
 
-        Review saved = reviewRepository.save(review);
+        // TODO 6. Привязываем к сделке, если указана (нужен DealRepository)
+        //  if (request.getDealId() != null) {
+        //    Deal deal = dealRepository.findById(request.getDealId())
+        //            .orElseThrow(() -> new RuntimeException("Сделка не найдена с id: " + request.getDealId()));
+        //    review.setDeal(deal);
+        //}
 
-        // Обновляем поле rating у пользователя (если решишь оставить поле)
-        // updateUserRating(reviewee);
+        // TODO 7. Привязываем к запросу услуги, если указан (нужен ServiceRequestRepository)
+//          if (request.getServiceRequestId() != null) {
+//            ServiceRequest serviceRequest = serviceRequestRepository.findById(request.getServiceRequestId())
+//                    .orElseThrow(() -> new RuntimeException("Запрос услуги не найден с id: " + request.getServiceRequestId()));
+//            review.setServiceRequest(serviceRequest);
+//        }
 
-        return toResponse(saved);
+        // 8. Сохраняем отзыв
+        Review savedReview = reviewRepository.save(review);
+
+        // TODO 9. Обновляем рейтинг пользователя (через метод из User)
+        //  User.updateRating()
+
+        return mapToResponse(savedReview);
     }
 
     // Получить все отзывы о пользователе
-    public List<ReviewResponse> getReviewsForUser(Long userId) {
+    public List<ReviewResponse> getReviewsByUser(Long userId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("Пользователь не найден"));
+                .orElseThrow(() -> new RuntimeException("Пользователь не найден с id: " + userId));
 
         return reviewRepository.findByUser(user).stream()
-                .map(this::toResponse)
-                .toList();
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
     // Получить все отзывы, написанные пользователем
-    public List<ReviewResponse> getReviewsByUser(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("Пользователь не найден"));
+    public List<ReviewResponse> getReviewsByAuthor(Long authorId) {
+        User author = userRepository.findById(authorId)
+                .orElseThrow(() -> new RuntimeException("Автор не найден с id: " + authorId));
 
-        return reviewRepository.findByAuthor(user).stream()
-                .map(this::toResponse)
-                .toList();
+        return reviewRepository.findByAuthor(author).stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
-    // Получить рейтинг пользователя
+    // Получить рейтинг пользователя (средняя оценка + количество отзывов)
     public RatingResponse getUserRating(Long userId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("Пользователь не найден"));
+                .orElseThrow(() -> new RuntimeException("Пользователь не найден с id: " + userId));
 
         Double avgRating = reviewRepository.getAverageRatingForUser(user);
-        Long totalReviews = (long) reviewRepository.findByUser(user).size();
+        long totalReviews = reviewRepository.countByUser(user);
 
         return RatingResponse.builder()
                 .userId(userId)
@@ -93,38 +113,60 @@ public class ReviewService {
                 .build();
     }
 
-    // Удалить отзыв (только автор или админ)
-    @Transactional
-    public void deleteReview(Long reviewId, Long currentUserId, boolean isAdmin) {
-        Review review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new RuntimeException("Отзыв не найден"));
+    // Получить отзыв по ID
+    public ReviewResponse getReviewById(Long id) {
+        Review review = reviewRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Отзыв не найден с id: " + id));
+        return mapToResponse(review);
+    }
 
-        // Проверяем права: только автор или админ
+    // Обновить отзыв (ТОЛЬКО АВТОР)
+    @Transactional
+    public ReviewResponse updateReview(Long id, CreateReviewRequest request, Long currentUserId) {
+        Review review = reviewRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Отзыв не найден с id: " + id));
+
+        // Проверяем, что текущий пользователь — автор отзыва
+        if (!review.getAuthor().getId().equals(currentUserId)) {
+            throw new RuntimeException("Только автор может редактировать отзыв");
+        }
+
+        review.setRating(request.getRating());
+        review.setComment(request.getComment());
+
+        Review updatedReview = reviewRepository.save(review);
+        return mapToResponse(updatedReview);
+    }
+
+    // Удалить отзыв (ТОЛЬКО АВТОР ИЛИ АДМИН)
+    @Transactional
+    public void deleteReview(Long id, Long currentUserId, boolean isAdmin) {
+        Review review = reviewRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Отзыв не найден с id: " + id));
+
+        // Проверяем права: либо автор, либо админ
         if (!review.getAuthor().getId().equals(currentUserId) && !isAdmin) {
-            throw new RuntimeException("Нет прав на удаление этого отзыва");
+            throw new RuntimeException("Нет прав для удаления этого отзыва");
         }
 
         reviewRepository.delete(review);
     }
 
-    // Конвертация Review -> ReviewResponse
-    private ReviewResponse toResponse(Review review) {
+    // Маппинг Review -> ReviewResponse
+    private ReviewResponse mapToResponse(Review review) {
         return ReviewResponse.builder()
                 .id(review.getId())
                 .authorId(review.getAuthor().getId())
-                .authorName(review.getAuthor().getFirstName() + " " + review.getAuthor().getLastName())
-                .revieweeId(review.getUser().getId())
-                .revieweeName(review.getUser().getFirstName() + " " + review.getUser().getLastName())
+                .authorFirstName(review.getAuthor().getFirstName())
+                .authorLastName(review.getAuthor().getLastName())
+                .userId(review.getUser().getId())
+                .userFirstName(review.getUser().getFirstName())
+                .userLastName(review.getUser().getLastName())
                 .rating(review.getRating())
                 .comment(review.getComment())
                 .createdAt(review.getCreatedAt())
+                .dealId(review.getDeal() != null ? review.getDeal().getId() : null)
+                .serviceRequestId(review.getServiceRequest() != null ? review.getServiceRequest().getId() : null)
                 .build();
-    }
-
-    // Обновить поле rating у пользователя (вызывать после каждого отзыва)
-    private void updateUserRating(User user) {
-        Double avg = reviewRepository.getAverageRatingForUser(user);
-        user.setRating(avg != null ? avg.floatValue() : 0.0f);
-        userRepository.save(user);
     }
 }
